added currencyParameterized/added general method